// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "town-square",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(ChannelPermissionGate)
    channelId="channel_id"
    permissions={
      Array [
        "manage_public_channel_properties",
      ]
    }
    teamId="team-id"
  >
    <Connect(ToggleModalButton)
      ariaLabel="Set a Header"
      className="intro-links color--link channelIntroButton"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      modalId="edit_channel_header"
    >
      <EditIcon />
      <MemoizedFormattedMessage
        defaultMessage="Set a Header"
        id="intro_messages.setHeader"
      />
    </Connect(ToggleModalButton)>
  </Connect(ChannelPermissionGate)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, readonly 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nMessages can only be posted by system admins. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.readonly.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enable, group constrained 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Connect(ToggleModalButton)
        className="intro-links color--link"
        dialogProps={
          Object {
            "channel": Object {
              "create_at": 1508265709607,
              "creator_id": "creator_id",
              "delete_at": 0,
              "display_name": "test channel",
              "header": "test",
              "id": "channel_id",
              "last_post_at": 1508265709635,
              "name": "town-square",
              "purpose": "test",
              "team_id": "team-id",
              "type": "O",
              "update_at": 1508265709607,
            },
          }
        }
        dialogType={
          Object {
            "$$typeof": Symbol(react.memo),
            "WrappedComponent": [Function],
            "compare": null,
            "type": [Function],
          }
        }
        modalId="add_groups_to_team"
      >
        <LocalizedIcon
          className="fa fa-user-plus"
          title={
            Object {
              "defaultMessage": "Add Icon",
              "id": "generic_icons.add",
            }
          }
        />
        <MemoizedFormattedMessage
          defaultMessage="Add other groups to this team"
          id="intro_messages.addGroupsToTeam"
        />
      </Connect(ToggleModalButton)>
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "town-square",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(ChannelPermissionGate)
    channelId="channel_id"
    permissions={
      Array [
        "manage_public_channel_properties",
      ]
    }
    teamId="team-id"
  >
    <Connect(ToggleModalButton)
      ariaLabel="Set a Header"
      className="intro-links color--link channelIntroButton"
      dialogProps={
        Object {
          "channel": Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          },
        }
      }
      dialogType={
        Object {
          "$$typeof": Symbol(react.memo),
          "WrappedComponent": [Function],
          "compare": null,
          "type": [Function],
        }
      }
      modalId="edit_channel_header"
    >
      <EditIcon />
      <MemoizedFormattedMessage
        defaultMessage="Set a Header"
        id="intro_messages.setHeader"
      />
    </Connect(ToggleModalButton)>
  </Connect(ChannelPermissionGate)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DEFAULT Channel should match snapshot, with enableUserCreation 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <FormattedMarkdownMessage
      defaultMessage="**Welcome to {display_name}!**\\\\n \\\\nPost messages here that you want everyone to see. Everyone automatically becomes a permanent member of this channel when they join the team."
      id="intro_messages.default"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Connect(TeamPermissionGate)
    permissions={
      Array [
        "invite_user",
      ]
    }
    teamId="team-id"
  >
    <Connect(TeamPermissionGate)
      permissions={
        Array [
          "add_user_to_team",
        ]
      }
      teamId="team-id"
    >
      <Memo(AddMembersButton)
        channel={
          Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "town-square",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          }
        }
        pluginButtons={
          <Memo(Connect(PluggableIntroButtons))
            channel={
              Object {
                "create_at": 1508265709607,
                "creator_id": "creator_id",
                "delete_at": 0,
                "display_name": "test channel",
                "header": "test",
                "id": "channel_id",
                "last_post_at": 1508265709635,
                "name": "town-square",
                "purpose": "test",
                "team_id": "team-id",
                "type": "O",
                "update_at": 1508265709607,
              }
            }
          />
        }
        setHeader={
          <Memo(Connect(ChannelPermissionGate))
            channelId="channel_id"
            permissions={
              Array [
                "manage_public_channel_properties",
              ]
            }
            teamId="team-id"
          >
            <Memo(Connect(ToggleModalButton))
              ariaLabel="Set a Header"
              className="intro-links color--link channelIntroButton"
              dialogProps={
                Object {
                  "channel": Object {
                    "create_at": 1508265709607,
                    "creator_id": "creator_id",
                    "delete_at": 0,
                    "display_name": "test channel",
                    "header": "test",
                    "id": "channel_id",
                    "last_post_at": 1508265709635,
                    "name": "town-square",
                    "purpose": "test",
                    "team_id": "team-id",
                    "type": "O",
                    "update_at": 1508265709607,
                  },
                }
              }
              dialogType={
                Object {
                  "$$typeof": Symbol(react.memo),
                  "WrappedComponent": [Function],
                  "compare": null,
                  "type": [Function],
                }
              }
              modalId="edit_channel_header"
            >
              <EditIcon />
              <Memo(MemoizedFormattedMessage)
                defaultMessage="Set a Header"
                id="intro_messages.setHeader"
              />
            </Memo(Connect(ToggleModalButton))>
          </Memo(Connect(ChannelPermissionGate))>
        }
        usersLimit={10}
      />
    </Connect(TeamPermissionGate)>
  </Connect(TeamPermissionGate)>
  <br />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match snapshot, with teammate 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <div
    className="post-profile-img__container channel-intro-img"
  >
    <ProfilePicture
      hasMention={true}
      isEmoji={false}
      isRHS={false}
      popoverPlacement="right"
      size="xl"
      src="/api/v4/users/user1/image?_=0"
      userId="user1"
      wrapperClass=""
    />
  </div>
  <div
    className="channel-intro-profile d-flex"
  >
    <Connect(UserProfile)
      disablePopover={false}
      hasMention={true}
      userId="user1"
    />
  </div>
  <p
    className="channel-intro-text"
  >
    <FormattedMarkdownMessage
      defaultMessage="This is the start of your direct message history with {teammate}.\\\\nDirect messages and files shared here are not shown to people outside this area."
      id="intro_messages.DM"
      values={
        Object {
          "teammate": "my teammate",
        }
      }
    />
  </p>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "testing",
        "purpose": "test",
        "team_id": "team-id",
        "type": "D",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(ToggleModalButton)
    ariaLabel="Set a Header"
    className="intro-links color--link channelIntroButton"
    dialogProps={
      Object {
        "channel": Object {
          "create_at": 1508265709607,
          "creator_id": "creator_id",
          "delete_at": 0,
          "display_name": "test channel",
          "header": "test",
          "id": "channel_id",
          "last_post_at": 1508265709635,
          "name": "testing",
          "purpose": "test",
          "team_id": "team-id",
          "type": "D",
          "update_at": 1508265709607,
        },
      }
    }
    dialogType={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      }
    }
    modalId="edit_channel_header"
  >
    <EditIcon />
    <MemoizedFormattedMessage
      defaultMessage="Set a Header"
      id="intro_messages.setHeader"
    />
  </Connect(ToggleModalButton)>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test DIRECT Channel should match snapshot, without teammate 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <p
    className="channel-intro-text"
  >
    <MemoizedFormattedMessage
      defaultMessage="This is the start of your direct message history with this teammate. Direct messages and files shared here are not shown to people outside this area."
      id="intro_messages.teammate"
    />
  </p>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Group Channel should match snapshot, no profiles 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <p
    className="channel-intro-text"
  >
    <MemoizedFormattedMessage
      defaultMessage="This is the start of your group message history with these teammates. Messages and files shared here are not shown to people outside this area."
      id="intro_messages.group_message"
    />
  </p>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Group Channel should match snapshot, with profiles 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <div
    className="post-profile-img__container channel-intro-img"
  >
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      key="introprofilepictureuser1"
      popoverPlacement="right"
      size="xl"
      src="/api/v4/users/user1/image?_=0"
      userId="user1"
      wrapperClass=""
    />
    <ProfilePicture
      hasMention={false}
      isEmoji={false}
      isRHS={false}
      key="introprofilepictureguest1"
      popoverPlacement="right"
      size="xl"
      src="/api/v4/users/guest1/image?_=0"
      userId="guest1"
      wrapperClass=""
    />
  </div>
  <p
    className="channel-intro-text"
  >
    <FormattedMarkdownMessage
      defaultMessage="This is the start of your group message history with {names}.\\\\nMessages and files shared here are not shown to people outside this area."
      id="intro_messages.GM"
      values={
        Object {
          "names": "test channel",
        }
      }
    />
  </p>
  <Connect(PluggableIntroButtons)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "testing",
        "purpose": "test",
        "team_id": "team-id",
        "type": "G",
        "update_at": 1508265709607,
      }
    }
  />
  <Connect(ToggleModalButton)
    ariaLabel="Set a Header"
    className="intro-links color--link channelIntroButton"
    dialogProps={
      Object {
        "channel": Object {
          "create_at": 1508265709607,
          "creator_id": "creator_id",
          "delete_at": 0,
          "display_name": "test channel",
          "header": "test",
          "id": "channel_id",
          "last_post_at": 1508265709635,
          "name": "testing",
          "purpose": "test",
          "team_id": "team-id",
          "type": "G",
          "update_at": 1508265709607,
        },
      }
    }
    dialogType={
      Object {
        "$$typeof": Symbol(react.memo),
        "WrappedComponent": [Function],
        "compare": null,
        "type": [Function],
      }
    }
    modalId="edit_channel_header"
  >
    <EditIcon />
    <MemoizedFormattedMessage
      defaultMessage="Set a Header"
      id="intro_messages.setHeader"
    />
  </Connect(ToggleModalButton)>
</div>
`;

exports[`components/post_view/ChannelIntroMessages test OFFTOPIC Channel should match snapshot 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <MemoizedFormattedMessage
      defaultMessage="This is the start of {display_name}, a channel for non-work-related conversations."
      id="intro_messages.offTopic"
      values={
        Object {
          "display_name": "test channel",
        }
      }
    />
  </p>
  <Memo(AddMembersButton)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "off-topic",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
    pluginButtons={
      <Memo(Connect(PluggableIntroButtons))
        channel={
          Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "off-topic",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          }
        }
      />
    }
    setHeader={
      <Memo(Connect(ChannelPermissionGate))
        channelId="channel_id"
        permissions={
          Array [
            "manage_public_channel_properties",
          ]
        }
        teamId="team-id"
      >
        <Memo(Connect(ToggleModalButton))
          ariaLabel="Set a Header"
          className="intro-links color--link channelIntroButton"
          dialogProps={
            Object {
              "channel": Object {
                "create_at": 1508265709607,
                "creator_id": "creator_id",
                "delete_at": 0,
                "display_name": "test channel",
                "header": "test",
                "id": "channel_id",
                "last_post_at": 1508265709635,
                "name": "off-topic",
                "purpose": "test",
                "team_id": "team-id",
                "type": "O",
                "update_at": 1508265709607,
              },
            }
          }
          dialogType={
            Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "type": [Function],
            }
          }
          modalId="edit_channel_header"
        >
          <EditIcon />
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Set a Header"
            id="intro_messages.setHeader"
          />
        </Memo(Connect(ToggleModalButton))>
      </Memo(Connect(ChannelPermissionGate))>
    }
    usersLimit={10}
  />
</div>
`;

exports[`components/post_view/ChannelIntroMessages test Open Channel should match snapshot, without boards 1`] = `
<div
  className="channel-intro "
  id="channelIntro"
>
  <h2
    className="channel-intro__title"
  >
    <MemoizedFormattedMessage
      defaultMessage="Beginning of {name}"
      id="intro_messages.beginning"
      values={
        Object {
          "name": "test channel",
        }
      }
    />
  </h2>
  <p
    className="channel-intro__content"
  >
    <span>
      <MemoizedFormattedMessage
        defaultMessage="This is the start of the {name} channel, created by {creator} on {date}."
        id="intro_messages.creator"
        values={
          Object {
            "creator": "creatorName",
            "date": <FormattedDate
              day="2-digit"
              month="long"
              value={1508265709607}
              year="numeric"
            />,
            "name": "test channel",
          }
        }
      />
    </span>
    <MemoizedFormattedMessage
      defaultMessage=" Any member can join and read this channel."
      id="intro_messages.anyMember"
    />
    <span>
      <MemoizedFormattedMessage
        defaultMessage=" This channel's purpose is: {purpose}"
        id="intro_messages.purpose"
        values={
          Object {
            "purpose": "test",
          }
        }
      />
    </span>
    <br />
  </p>
  <Memo(AddMembersButton)
    channel={
      Object {
        "create_at": 1508265709607,
        "creator_id": "creator_id",
        "delete_at": 0,
        "display_name": "test channel",
        "header": "test",
        "id": "channel_id",
        "last_post_at": 1508265709635,
        "name": "testing",
        "purpose": "test",
        "team_id": "team-id",
        "type": "O",
        "update_at": 1508265709607,
      }
    }
    pluginButtons={
      <Memo(Connect(PluggableIntroButtons))
        channel={
          Object {
            "create_at": 1508265709607,
            "creator_id": "creator_id",
            "delete_at": 0,
            "display_name": "test channel",
            "header": "test",
            "id": "channel_id",
            "last_post_at": 1508265709635,
            "name": "testing",
            "purpose": "test",
            "team_id": "team-id",
            "type": "O",
            "update_at": 1508265709607,
          }
        }
      />
    }
    setHeader={
      <Memo(Connect(ChannelPermissionGate))
        channelId="channel_id"
        permissions={
          Array [
            "manage_public_channel_properties",
          ]
        }
        teamId="team-id"
      >
        <Memo(Connect(ToggleModalButton))
          ariaLabel="Set a Header"
          className="intro-links color--link channelIntroButton"
          dialogProps={
            Object {
              "channel": Object {
                "create_at": 1508265709607,
                "creator_id": "creator_id",
                "delete_at": 0,
                "display_name": "test channel",
                "header": "test",
                "id": "channel_id",
                "last_post_at": 1508265709635,
                "name": "testing",
                "purpose": "test",
                "team_id": "team-id",
                "type": "O",
                "update_at": 1508265709607,
              },
            }
          }
          dialogType={
            Object {
              "$$typeof": Symbol(react.memo),
              "WrappedComponent": [Function],
              "compare": null,
              "type": [Function],
            }
          }
          modalId="edit_channel_header"
        >
          <EditIcon />
          <Memo(MemoizedFormattedMessage)
            defaultMessage="Set a Header"
            id="intro_messages.setHeader"
          />
        </Memo(Connect(ToggleModalButton))>
      </Memo(Connect(ChannelPermissionGate))>
    }
    usersLimit={10}
  />
</div>
`;
